--- a/_variables.yml
+++ b/_variables.yml
@@ -17,7 +17,7 @@ course:
   semester: "Spring 2023"
   days: "Tue/Thu"
   time: "1:30–2:45 PM"
-  location: "TBD"
+  location: "Sever 203"
   dates: "January 23rd-April 26th, 2023"
   github: ""
   url: "https://gov2002.mattblackwell.org"
