--- a/_quarto.yml
+++ b/_quarto.yml
@@ -48,6 +48,9 @@ website:
             - assignments/index.qmd
             - assignments/problem-sets.qmd
         - section: "Assignments"
+          contents:
+            - text: "Problem Set 1"
+              file: assignments/01_problem_set.qmd
 
 format:
   html:
