--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,6 +37,8 @@ website:
           contents:
             - text: "Week 1: Introduction & Probability"
               file: materials/week_01.qmd
+            - text: "Week 2: Conditional Probability & Random Variables"
+              file: materials/week_02.qmd
               
     - title: "Assignments"
       style: "docked"
