--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,6 +39,8 @@ website:
               file: materials/week_01.qmd
             - text: "Week 2: Conditional Probability & Random Variables"
               file: materials/week_02.qmd
+            - text: "Week 3: Expectation"
+              file: materials/week_03.qmd
               
     - title: "Assignments"
       style: "docked"
