--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,6 +43,8 @@ website:
               file: materials/week_03.qmd
             - text: "Week 4: Continuous Random Variables"
               file: materials/week_04.qmd
+            - text: "Week 5: Multivariate Distributions"
+              file: materials/week_05.qmd
               
     - title: "Assignments"
       style: "docked"
