--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,6 +47,8 @@ website:
               file: materials/week_05.qmd
             - text: "Week 6: Conditional Expectation"
               file: materials/week_06.qmd
+            - text: "Week 7: Sampling and Estimation"
+              file: materials/week_07.qmd
               
     - title: "Assignments"
       style: "docked"
