--- a/_quarto.yml
+++ b/_quarto.yml
@@ -55,6 +55,8 @@ website:
               file: materials/week_09.qmd
             - text: "Week 10: Linear Regression"
               file: materials/week_10.qmd
+            - text: "Week 11: Algebra of Least Squares"
+              file: materials/week_11.qmd
               
     - title: "Assignments"
       style: "docked"
