--- a/_quarto.yml
+++ b/_quarto.yml
@@ -57,6 +57,8 @@ website:
               file: materials/week_10.qmd
             - text: "Week 11: Algebra of Least Squares"
               file: materials/week_11.qmd
+            - text: "Week 12: Statistics of Least Squares"
+              file: materials/week_12.qmd
               
     - title: "Assignments"
       style: "docked"
