--- a/_quarto.yml
+++ b/_quarto.yml
@@ -89,6 +89,8 @@ website:
               file: assignments/08_problem_set.qmd
             - text: "Problem Set 9"
               file: assignments/09_problem_set.qmd
+            - text: "Problem Set 10"
+              file: assignments/10_problem_set.qmd
 
 format:
   html:
