--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,6 +59,8 @@ website:
               file: materials/week_11.qmd
             - text: "Week 12: Statistics of Least Squares"
               file: materials/week_12.qmd
+            - text: "Week 13: Panel and Clustered Data"
+              file: materials/week_13.qmd
               
     - title: "Assignments"
       style: "docked"
